# Toxx

./: .travis.yml  CMakeLists.txt
cmake/: toolchain-freebsd.cmake  toolchain-openbsd.cmake
extra/common/: build_opus.sh
extra/gitlab/: linux-muslc-script.sh  linux-script.sh  windows-before.sh  windows-script.sh
extra/travis/: linux-script.sh  windows-before.sh  windows-script.sh
langs/: cn.h  de.h  en.h  eo.h  es.h  fr.h  hr.h  hu.h  i18n_decls.h  it.h  no.h  pl.h  pt.h  ru.h  sv.h  tw.h  uk.h
src/: chatlog.h  file_transfers.c  flist.c  friend.c  friend.h  groups.c  macros.h  main.c  main.h  messages.c  notify.h  settings.c  settings.h  text.c  text.h  theme.c  tox.c  tox.h  tox_callbacks.c  ui.c  ui.h  utox.c  utox.h  utoxx.desktop
src/av/: CMakeLists.txt  audio.c  utox_av.c  utox_av.h  video.c
src/layout/: CMakeLists.txt  friend.c  settings.c  settings.h  sidebar.c
src/native/: os.h
src/ui/: CMakeLists.txt  edit.c
src/windows/: CMakeLists.txt  events.c  filesys.c  main.7.c  main.c  utox.rc  video.c  window.c
src/xlib/: CMakeLists.txt  gtk.c  main.c  tray.c  video.c  window.c
tests/: test.h
